# AutoscalingTutorial

./: .gitignore  README.md  consumer.Dockerfile  pyproject.toml
deployment/: deployment.yaml  rmq_secret.yaml  scaled-object.yaml
src/autoscalingtutorial/: __init__.py  consumer.py  sender.py  utils.py
