[project]
name = "autoscalingtutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thanuj V", email = "thanuj@myurbanjungle.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pika>=1.3.2",
]

[project.scripts]
autoscalingtutorial = "autoscalingtutorial:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
